-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u291, jfx17
-
Component/s: javafx
-
x86_64
-
windows_10
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8285990 | jfx17.0.4 | Ambarish Rapte | P3 | Resolved | Fixed | |
| JDK-8285854 | jfx11.0.16 | Ambarish Rapte | P3 | Resolved | Fixed | |
| JDK-8282824 | 8u341 | Dukebot | P3 | Resolved | Fixed | b01 |
Windows 10
JavaFX 17
Note that it works fine with previous versions of JavaFX.
A DESCRIPTION OF THE PROBLEM :
When the provided HTML is opened in WebView and one tries to drag over the document (with mouse button down), the value of "event.buttons" is 0 when it should be 1 (at least this is how it works in all other major browsers).
Note that this issue is highly related to:
... but since it was closed (I presume mistakenly) I am creating a new ticket.
REGRESSION : Last worked in version 16.0.2
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
Open the provided test case inside WebView.
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
When dragging with mouse over the document (with mouse button down), the value of "event.buttons" should be 1.
ACTUAL -
When dragging with mouse over the document (with mouse button down), the value of "event.buttons" is 0.
---------- BEGIN SOURCE ----------
<!doctype html>
<body style="height: 200px">
<p>Click and drag & observe the console output</p>
<script>
var onMove = function (e) {
console.warn("e.buttons: " + e.buttons);
}
var body = document.getElementsByTagName('body')[0];
document.addEventListener("pointermove", onMove, false);
</script>
</body>
---------- END SOURCE ----------
CUSTOMER SUBMITTED WORKAROUND :
No workaround present.
FREQUENCY : always
- backported by
-
JDK-8282824 PointerEvent: buttons property set to 0 when mouse down
-
- Resolved
-
-
JDK-8285854 PointerEvent: buttons property set to 0 when mouse down
-
- Resolved
-
-
JDK-8285990 PointerEvent: buttons property set to 0 when mouse down
-
- Resolved
-
- duplicates
-
JDK-8276859 Leaflet no longer works in WebKit 612.1
-
- Closed
-
- relates to
-
JDK-8276859 Leaflet no longer works in WebKit 612.1
-
- Closed
-
- links to
-
Commit
openjdk/jfx11u/c2c62ff4
-
Commit
openjdk/jfx17u/dd592f13
-
Commit
openjdk/jfx/2e8a4a5e
-
Review
openjdk/jfx11u/87
-
Review
openjdk/jfx17u/44
-
Review
openjdk/jfx/742