8278759: PointerEvent: buttons property set to 0 when mouse down

Reviewed-by: kcr, arapte