modules/javafx.web/src/main/java/javafx/scene/web/WebView.java
@@ -1085,13 +1085,16 @@ final public class WebView extends Parent {
             // not supported by webkit
             return;
         }
+        final int buttonMask = ((ev.isPrimaryButtonDown()   ? WCMouseEvent.BUTTON1 : WCMouseEvent.NOBUTTON) |
+                                (ev.isMiddleButtonDown()    ? WCMouseEvent.BUTTON2 : WCMouseEvent.NOBUTTON) |
+                                (ev.isSecondaryButtonDown() ? WCMouseEvent.BUTTON3 : WCMouseEvent.NOBUTTON));
         WCMouseEvent mouseEvent =
                 new WCMouseEvent(id, button,
                     ev.getClickCount(), (int) x, (int) y,
                     (int) screenX, (int) screenY,
                     System.currentTimeMillis(),
                     ev.isShiftDown(), ev.isControlDown(), ev.isAltDown(),
-                    ev.isMetaDown(), ev.isPopupTrigger());
+                    ev.isMetaDown(), ev.isPopupTrigger(), buttonMask);
         page.dispatchMouseEvent(mouseEvent);
         ev.consume();
     }
